# ChocoGL

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  ChocoGL.sln  README.md  premake5.lua
ChocoGL/: ChocoGL.vcxproj  ChocoGL.vcxproj.filters  ClassDiagram.cd
ChocoGL-ScriptCore/: ChocoGL-ScriptCore.csproj
ChocoGL-ScriptCore/src/ChocoGL/: Entity.cs  Input.cs  KeyCodes.cs  SpriteRenderer.cs
ChocoGL-ScriptCore/src/ChocoGL/Math/: Mathf.cs  Vector2.cs  Vector3.cs  Vector4.cs
ChocoGL-ScriptCore/src/ChocoGL/Renderer/: Material.cs  MeshFactory.cs  Texture2D.cs
ChocoGL-ScriptCore/src/ChocoGL/Scene/: Component.cs
ChocoGL-ScriptCore/src/Hazel/: Entity.cs
ChocoGL-ScriptCore/src/Hazel/Math/: Matrix4.cs  Noise.cs  Vector3.cs
ChocoGL-ScriptCore/src/Hazel/Renderer/: Color.cs  Material.cs  Mesh.cs
ChocoGL-ScriptCore/src/Hazel/Scene/: Component.cs
ChocoGL/src/: ChcocGL.h  ChocoGL.h  clpch.cpp  clpch.h
ChocoGL/src/ChocoGL/: Application.cpp  Application.h  Buffer.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
ChocoGL/src/ChocoGL/Core/: Application.cpp  Application.h  Assert.h  Buffer.h  Core.cpp  Core.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Ref.h  TimeStep.cpp  TimeStep.h  Timer.h  UUID.cpp  UUID.h  Window.h
ChocoGL/src/ChocoGL/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
ChocoGL/src/ChocoGL/Core/Math/: AABB.h  Mat4.cpp  Mat4.h  Noise.cpp  Noise.h  Ray.h
ChocoGL/src/ChocoGL/Editor/: EditorCamera.cpp  EditorCamera.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
ChocoGL/src/ChocoGL/Events/: ApplicationEvent.h  Event.h  KeyEvent.h
ChocoGL/src/ChocoGL/Imgui/: ImGuiBuild.cpp  ImGuizmo.cpp  ImguiLayer.cpp  ImguiLayer.h
ChocoGL/src/ChocoGL/Physics/: Physics3D.cpp  Physics3D.h
ChocoGL/src/ChocoGL/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  ShaderUniform.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
ChocoGL/src/ChocoGL/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h
ChocoGL/src/ChocoGL/Script/: ScriptEngine.cpp  ScriptEngine.h  ScriptEngineRegistry.cpp  ScriptEngineRegistry.h  ScriptWrappers.cpp  ScriptWrappers.h
ChocoGL/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLRenderPass.cpp  OpenGLRenderPass.h  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderUniform.cpp  OpenGLShaderUniform.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
ChocoGL/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
CoCo/: EditorLayer.cpp  imgui.ini
CoCo/assets/meshes/: Sphere1m.fbx  imgui.ini
CoCo/assets/models/m1911/: imgui.ini
CoCo/assets/scenes/: 112e  Physics3DTest.hsc  StreamTestScene.hsc
CoCo/assets/scenes/levels/: Platformer.hsc
CoCo/assets/shaders/: ChocoGLPBR_Anim.glsl  ChocoGLPBR_Static.glsl
CoCo/assets/textures/cerberus/: imgui.ini
CoCo/src/: CoCo.cpp  EditorLayer.cpp  EditorLayer.h
ExampleApp/: ExampleApp.csproj
ExampleApp/src/: BasicController.cs  MapGenerator.cs  Noise.cs  PlayerCube.cs  PlayerSphere.cs  RandomColor.cs  Script.cs  Sink.cs
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini
Sandbox/assets/models/m1911/: imgui.ini
Sandbox/assets/textures/cerberus/: imgui.ini
Sandbox/src/: Sandbox.cpp
enc_temp_folder/922251e03cb45bae4ee18d8aff71cf1/: Mesh.cpp
